# nebulastream

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vercel.json
.github/workflows/: ci.yml  ghcr-publish.yml  pages.yml
apps/backend-api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/backend-api/api/routes/: aggregated_movies.py  auth.py  health.py  movies.py  search.py  streams.py  tv.py  users.py  watch_history.py
apps/backend-api/core/: config.py  database.py  logging.py
apps/backend-api/models/: __init__.py  favorite.py  genre.py  movie.py  movie_genre.py  provider.py  stream.py  user.py  watch_history.py
apps/backend-api/schemas/: __init__.py  auth.py  common.py  ingest.py  movie.py  stream.py  user.py  watch_history.py
apps/backend-api/services/: cache.py  catalog_aggregator.py  ingest_pipeline.py  movie_aggregation.py  scraper_engine.py  stream_aggregator.py  stream_finder.py  streaming_client.py  tmdb.py  torrent_ingest.py
apps/backend-api/services/providers/: __init__.py  common.py  superembed_provider.py  twoembed_provider.py  vidcloud_provider.py  vidlink_provider.py  vidsrc_provider.py  vidsrc_resolver_provider.py
apps/backend-api/src/backend_api/: __init__.py  main.py
apps/backend-api/src/backend_api/api/routes/: health.py
apps/console/: package.json
apps/console/src/: index.ts
apps/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/frontend/public/: index.html  manifest.json
apps/frontend/src/: App.tsx  index.css  index.tsx
apps/frontend/src/components/Brand/: Wordmark.tsx
apps/frontend/src/components/Hero/: Hero.tsx
apps/frontend/src/components/Intro/: IntroScreen.tsx
apps/frontend/src/components/Layout/: Layout.tsx
apps/frontend/src/components/Loading/: Loading.tsx
apps/frontend/src/components/MovieCard/: MovieCard.tsx
apps/frontend/src/components/MovieRow/: MovieRow.tsx
apps/frontend/src/components/Navbar/: MobileNavBar.tsx  Navbar.tsx
apps/frontend/src/components/VideoPlayer/: VideoPlayer.tsx
apps/frontend/src/config/: introConfig.ts
apps/frontend/src/pages/Auth/: Login.tsx  Register.tsx
apps/frontend/src/pages/Browse/: Browse.tsx
apps/frontend/src/pages/Filter/: Filter.tsx
apps/frontend/src/pages/Home/: Home.tsx
apps/frontend/src/pages/MovieDetail/: MovieDetail.tsx
apps/frontend/src/pages/NotFound/: NotFound.tsx
apps/frontend/src/pages/Player/: Player.tsx
apps/frontend/src/pages/Profile/: Profile.tsx
apps/frontend/src/pages/Search/: Search.tsx
apps/frontend/src/pages/TVDetail/: TVDetail.tsx
apps/frontend/src/pages/Watchlist/: Watchlist.tsx
apps/frontend/src/services/: api.ts
apps/frontend/src/store/: authStore.ts  movieStore.ts
apps/frontend/src/types/: index.ts
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT.md  README.md  catalog-aggregator.md
infra/: README.md
infra/docker/postgres/init/: 01-init.sql
services/api/: package.json
services/api/src/: index.ts  main.ts
services/api/src/application/: register_user.ts
services/api/src/domain/: errors.ts  user.ts  user_repository.ts
services/api/src/infrastructure/: in_memory_user_repository.ts
services/api/src/interfaces/: http_server.ts
services/catalog-aggregator/: Dockerfile  README.md  requirements.txt
services/catalog-aggregator/app/: __init__.py  config.py  main.py  schemas.py
services/catalog-aggregator/app/providers/: base.py  imdb.py  mdblist.py  tmdb.py  trakt.py  watchmode.py
services/catalog-aggregator/app/services/: aggregator.py  cache.py
services/stream-proxy/: Cargo.toml  Dockerfile
services/stream-proxy/src/: config.rs  error.rs  main.rs  proxy.rs
services/streaming-service/: Cargo.toml  Dockerfile
services/streaming-service/src/: config.rs  error.rs  hls.rs  main.rs  models.rs  signing.rs  storage.rs  transcode.rs
services/torrent-engine/: Cargo.toml  Dockerfile
services/torrent-engine/src/: config.rs  engine.rs  main.rs  models.rs
workers/edge-proxy/: wrangler.toml
workers/edge-proxy/src/: index.js
