[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-api"
version = "0.1.0"
description = "NebulaStream backend API service"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "uvicorn[standard]>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8.0",
  "ruff>=0.2.2",
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
backend_api = ["py.typed"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
