[package]
name = "stream-proxy"
version = "1.0.0"
edition = "2021"
authors = ["NebulaStream Team"]
description = "High-performance stream proxy service for NebulaStream"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.34", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }
url = "2.5"
bytes = "1.5"
futures = "0.3"
http = "1.0"
hyper = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
