[package]
name = "stream-proxy"
version = "1.0.0"
edition = "2021"
authors = ["NebulaStream Team"]
description = "High-performance stream proxy service for NebulaStream"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
reqwest = { version = "0.13.2", features = ["stream", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0.102"
uuid = { version = "1.22.0", features = ["v4"] }
url = "2.5.8"
bytes = "1.11.1"
futures = "0.3.32"
http = "1.4.0"
hyper = { version = "1.8.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
