[package]
name = "streaming-service"
version = "0.1.0"
edition = "2021"
authors = ["NebulaStream Team"]
description = "Playback session and HLS rewrite service for NebulaStream"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0.102"
uuid = { version = "1.22.0", features = ["v4"] }
url = "2.5.8"
bytes = "1.11.1"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
reqwest = { version = "0.13.2", features = ["rustls"], default-features = false }
aws-config = "1.8.15"
aws-sdk-s3 = "1.127.0"
aws-credential-types = "1.2.14"
thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
