[package]
name = "torrent-engine"
version = "1.0.0"
edition = "2021"
authors = ["NebulaStream Team"]
description = "Torrent streaming engine for NebulaStream"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.34", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
urlencoding = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }

# Note: In a production implementation, you would use a Rust torrent library
# such as librqbit or implement torrent protocol support
# For this architecture demonstration, we'll create the service structure

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
