[package]
name = "torrent-engine"
version = "1.0.0"
edition = "2021"
authors = ["NebulaStream Team"]
description = "Torrent streaming engine for NebulaStream"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
urlencoding = "2.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0.102"
uuid = { version = "1.22.0", features = ["v4"] }

# Note: In a production implementation, you would use a Rust torrent library
# such as librqbit or implement torrent protocol support
# For this architecture demonstration, we'll create the service structure

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
